# rail_ccl

./: README.md  environment.yml  pyproject.toml
examples/: cosmic_shear_snr_demo.ipynb
src/rail/ccl/: __init__.py  _version.py
src/rail/evaluation/metrics/: cosmic_shear_snr.py
src/rail/evaluation/metrics/.ipynb_checkpoints/: cosmic_shear_snr-checkpoint.py
tests/ccl/: test_cosmic_shear_snr.py  test_import.py
