[project]
name = "pz-rail-ccl"
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "LSST Dark Energy Science Collaboration (DESC)", email = "lsst-desc-rail-admin@slac.stanford.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = [
    "deprecated",
    "pz-rail-base>=2.0.0-dev",
    "numpy",
    "scipy>=1.9.0",
    "pyccl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",    # Used to report total code coverage
    "pre-commit",    # Used to run checks before finalizing a git commit
    "pylint",        # Used for static linting of files
]

[build-system]
requires = [
    "setuptools>=62",      # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/rail/ccl/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = ["--cov=rail", "--cov-report=html"]

[tool.pylint]
disable = [
    "abstract-method",
    "arguments-differ",               # let child classes override methods with extra args
    "attribute-defined-outside-init",
    "broad-exception-caught",
    "duplicate-code",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-statements",
    "unused-argument",                # need extra **kwargs in some places
    "use-dict-literal",
]
max-line-length = 110
max-locals = 50
max-branches = 25
max-public-methods = 50

[tool.coverage.run]
omit = ["*/_version.py"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "__repr__",
    "TYPE_CHECKING",
]

[tool.isort]
profile = "black"
